2009-09-28 Frank Kober <goemusic@yahoo.fr>
	* seqdriver.*: switched from ALSA tick to ALSA realtime event
	scheduling to allow for smoother MIDI clock slave operation. 
	Internal handling continues to be in ticks. On-the-fly tempo changes 
	while running including those of the incoming MIDI clock are still 
	troublesome, starting midi clock speed is guessed from local 
	tempo value
	* mainwindow.cpp: fixed unmatched port value update when file
	loaded, stop Queue before clear(), add View menu, add tooltips,
	fix double employed Ctrl-N key sequence
	* logwidget.cpp: disable logging by default

2009-09-26 Frank Kober <goemusic@yahoo.fr>
	* mainwindow.*, lfowidget.*, arpwidget.*, seqdriver.*, arpdata.*: 
	new load/save/saveAs logic adapted from Guido's implementation in 
	qmidiroute started
	* seqdriver.cpp: some optimization for LFO data queueing
	* midiarp.cpp: fixed: repeatPatternMode "down" didn't work with chords
	in pattern, a bug from original version I think (spotted by Robert 
	Dietrich)
	* midilfo.cpp: fixed uninitialized isMuted state

2009-09-25 Frank Kober <goemusic@yahoo.fr>
	* lfoscreen.cpp: max number of divisor separators limited to 64
	* seqdriver.cpp: mute state of midilfo now handled, muting gets active 
	only after a completed LFO cycle

2009-09-24 Frank Kober <goemusic@yahoo.fr>
	* midilfo.cpp: fixed triangle waveform in terms of length
	* lfoscreen.*: new class for waveform display added
	* lfowidget.*: lfoscreen added and updated on every parameter change
	* seqdriver.cpp: fixed missing initial echo request when no 
	LFO present
	
2009-09-23 Frank Kober <goemusic@yahoo.fr>
	* MIDI LFO added as new feature. GUI-wise LFOs coexist with Arps in 
	tabwidget. They are handeled in parallel through arpdata.cpp and are
	using the same queue as the arps. Each LFO outputs MIDI controller 
	data in adjustable resolution, waveform, amplitude, table length.  
	* midilfo.*, lfowidget.*, lfoadd.xpm: added